bk_ida/gccida/c3/ggc_collect
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1889:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *free_pages; // rdi 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1890:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v4; // rbx 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1891:1: error: unknown type name 'page_group_0'; did you mean 'page_group'?
page_group_0 *page_groups; // rax 
^~~~~~~~~~~~
page_group
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:267:3: note: 'page_group' declared here
} page_group;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1892:1: error: use of undeclared identifier 'page_group_0'; did you mean 'page_groups'?
page_group_0 *v6; // rbx 
^~~~~~~~~~~~
page_groups
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1891:15: note: 'page_groups' declared here
page_group_0 *page_groups; // rax 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1892:15: error: use of undeclared identifier 'v6'
page_group_0 *v6; // rbx 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1894:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v8; // rbp 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1899:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v13; // r13 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1900:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v14; // r11 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1902:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 **v16; // r9 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1903:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v17; // rbp 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1904:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v18; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1905:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v19; // r12 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1907:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v21; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1912:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 **v26; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1914:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v28; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1923:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 **v37; // [rsp+0h] [rbp-58h] 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1925:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v39; // [rsp+10h] [rbp-48h] 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1929:45: error: invalid conversion between vector type '__m128' (vector of 4 'float' values) and integer type 'size_t' (aka 'unsigned long') of different size
v0 = _mm_sub_pd( ( __m128d)_mm_unpacklo_ps( ( __m128)G.allocated, ( __m128)xmm*(short *)0x68F950), ( __m128d)xmm*(short *)0x68F960); 
                                            ^~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/ggc-page.c:1929:76: error: use of undeclared identifier 'xmm'
v0 = _mm_sub_pd( ( __m128d)_mm_unpacklo_ps( ( __m128)G.allocated, ( __m128)xmm*(short *)0x68F950), ( __m128d)xmm*(short *)0x68F960); 
                                                                           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_collect/src/obj/ggc-page.o] Error 1
